Pasted-Compiled-with-problems-ERROR-in-src-App-js-Module-build-failed-from-node-modules-babel-lo-1729641888607.txt
Compiled with problems:
×
ERROR in ./src/App.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/CentaurionSlidr-1/frontend/src/App.js: Unexpected token (94:0)

  92 |
  93 |   // ... Rest of the AppUI component remains the same ...
> 94 |
     | ^
    at constructor (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:362:19)
    at FlowParserMixin.raise (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:3259:19)
    at FlowParserMixin.unexpected (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:3279:16)
    at FlowParserMixin.parseExprAtom (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10969:16)
    at FlowParserMixin.parseExprAtom (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:6811:20)
    at FlowParserMixin.parseExprSubscripts (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10591:23)
    at FlowParserMixin.parseUpdate (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10576:21)
    at FlowParserMixin.parseMaybeUnary (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10556:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10410:61)
    at FlowParserMixin.parseExprOps (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10415:23)
    at FlowParserMixin.parseMaybeConditional (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10392:23)
    at FlowParserMixin.parseMaybeAssign (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10355:21)
    at FlowParserMixin.parseMaybeAssign (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:5678:18)
    at FlowParserMixin.parseExpressionBase (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10309:23)
    at /home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10305:39
    at FlowParserMixin.allowInAnd (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:11932:16)
    at FlowParserMixin.parseExpression (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10305:17)
    at FlowParserMixin.parseStatementContent (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12376:23)
    at FlowParserMixin.parseStatementLike (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12243:17)
    at FlowParserMixin.parseStatementLike (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:5047:24)
    at FlowParserMixin.parseStatementListItem (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12223:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12796:61)
    at FlowParserMixin.parseBlockBody (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12789:10)
    at FlowParserMixin.parseBlock (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12777:10)
    at FlowParserMixin.parseFunctionBody (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:11620:24)
    at /home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:5021:63
    at FlowParserMixin.forwardNoArrowParamsConversionAt (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:5197:16)
    at FlowParserMixin.parseFunctionBody (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:5021:12)
    at FlowParserMixin.parseArrowExpression (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:11595:10)
    at FlowParserMixin.parseParenAndDistinguishExpression (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:11208:12)
    at FlowParserMixin.parseParenAndDistinguishExpression (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:5720:18)
    at FlowParserMixin.parseExprAtom (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10849:23)
    at FlowParserMixin.parseExprAtom (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:6811:20)
    at FlowParserMixin.parseExprSubscripts (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10591:23)
    at FlowParserMixin.parseUpdate (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10576:21)
    at FlowParserMixin.parseMaybeUnary (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10556:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10410:61)
    at FlowParserMixin.parseExprOps (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10415:23)
    at FlowParserMixin.parseMaybeConditional (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10392:23)
    at FlowParserMixin.parseMaybeAssign (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10355:21)
    at FlowParserMixin.parseMaybeAssign (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:5678:18)
    at /home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10325:39
    at FlowParserMixin.allowInAnd (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:11932:16)
    at FlowParserMixin.parseMaybeAssignAllowIn (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:10325:17)
    at FlowParserMixin.parseVar (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12864:91)
    at FlowParserMixin.parseVarStatement (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12710:10)
    at FlowParserMixin.parseStatementContent (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12326:23)
    at FlowParserMixin.parseStatementLike (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12243:17)
    at FlowParserMixin.parseStatementLike (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:5047:24)
    at FlowParserMixin.parseModuleItem (/home/runner/CentaurionSlidr-1/frontend/node_modules/@babel/parser/lib/index.js:12220:17)
ERROR
[eslint] 
src/App.js
  Line 94:  Parsing error: Unexpected token (94:0)
